Fixing resume button text wrapping;

--- a/styles/style.css
+++ b/styles/style.css
@@ -227,7 +227,7 @@ ul.bullet {
 	line-height: 21px;
 	border: 2px solid #d4d4d4;
 	display: block;
-	max-width: 150px;
+	max-width: 200px;
 	text-align: center;
 }
 
